--- a/pages/about.html
+++ b/pages/about.html
@@ -5,221 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookaka - About</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f8c32c;
-      color: #333;
-    }
-
-    /* Header */
-    header {
-      background-color: #ddebf4;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 15px 60px;
-    }
-
-    nav a {
-      margin-left: 25px;
-      font-weight: 600;
-      color: #444;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      color: #c41c1c;
-    }
-
-    /* Hero section */
-    .chef-phone-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      flex-wrap: wrap;
-    }
-
-    .chef-phone-wrapper img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .chef-img {
-      width: 1800px;
-      position: relative;
-      z-index: 1;
-      margin-right: -60%; /* overlap amount */
-    }
-
-    .phone-img {
-      width: 1000px;
-      position: relative;
-      z-index: 2;
-    }
-
-    /* Buttons under phone */
-    .button-group {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-      margin-top: 25px;
-    }
-
-    .view-more {
-      background-color: #d2a617;
-      border: none;
-      color: #3c2805;
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      cursor: pointer;
-      transition: all 0.3s;
-      box-shadow: inset 0 -3px 0 #b28910;
-    }
-
-    .view-more:hover {
-      background-color: #c39a12;
-    }
-
-    .click-here {
-      background-color: #c41c1c;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-family: 'Kaushan Script', cursive;
-      font-size: 1.2em;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
-      box-shadow: inset 0 -3px 0 #8f1111;
-    }
-
-    .click-here:hover {
-      background-color: #a6141e;
-    }
-
-    /* Follow Us */
-    .follow {
-      background: #e3b822;
-      text-align: center;
-      padding: 25px 0;
-      margin: 40px 0;
-      border-radius: 10px;
-    }
-
-    .follow h3 {
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
-
-    .social-icons a {
-      color: white;
-      background-color: #c41c1c;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 42px;
-      height: 42px;
-      border-radius: 50%;
-      margin: 6px;
-      font-size: 18px;
-      transition: background 0.3s;
-    }
-
-    .social-icons a:hover {
-      background-color: #a6141e;
-    }
-
-    footer {
-      background: #ddebf4;
-      text-align: center;
-      padding: 15px;
-      font-size: 0.9em;
-      color: #555;
-    }
-
-    /* ABOUT SECTION */
-    .about-section {
-      background: #ddebf4;
-      width: 85%;
-      margin: 50px auto;
-      padding: 30px 25px;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
-      position: relative;
-    }
-
-    .about-title {
-      background: #c41c1c;
-      color: white;
-      padding: 8px 25px;
-      border-radius: 5px;
-      font-weight: bold;
-      letter-spacing: 2px;
-      display: inline-block;
-      position: absolute;
-      top: -20px;
-      left: 50%;
-      transform: translateX(-50%);
-      box-shadow: 0 4px 0 #9c1616;
-    }
-
-    .about-section h5 {
-      color: #1f1f1f;
-      font-weight: 600;
-      margin-top: 20px;
-      font-size: 1rem;
-    }
-
-    .about-section p {
-      font-size: 0.9em;
-      color: #1b1b1b;
-      margin-top: 8px;
-    }
-
-    .about-section a {
-      color: #313131;
-      text-decoration: underline;
-    }
-
-    .about-section a:hover {
-      color: #000000;
-    }
-
-    @media (max-width: 900px) {
-      .chef-phone-wrapper {
-        flex-direction: column;
-      }
-
-      .chef-img {
-        margin-right: 0;
-        margin-bottom: -40px;
-      }
-
-      .about-section {
-        width: 95%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="../style/about.css">
 </head>
 
 <body>
