--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookaka</title>
+  <title>Home</title>
   <link rel="stylesheet" href="style/index.css">
   <link rel="stylesheet" href="style/header.css">
 
@@ -26,6 +26,12 @@
       <img src="images/bg-page.png" alt="chef" class="chef">
       <img src="images/smartphone.png" alt="smartphone" class="smartphone">
     </div>
+
+    <div>
+      <img src="images/" alt="">
+    </div>
+
+
   
   
 </body>
