--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Cookaka</title>
+          <title>About</title>
           <link rel="stylesheet" href="../style/about.css">
           <link rel="stylesheet" href="../style/header.css">
 </head>
