--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,7 +11,7 @@
           <body>
                     <header>
                               <div class="header-wrapper">
-                                        <img src="/images/logo.jpg" alt="logo ng cookaka" class="cookako">
+                                        <img src="/images/logo.jpg" alt="logo ng cookaka" class="cookako-logo">
 
                                         <div class="nav-list">
                                                   <ul>
