--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       <img src="images/smartphone.png" alt="smartphone" class="smartphone">
     </div>
 
-    <div>
-      <img src="images/" alt="">
+    <div class="follows">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, veritatis? Incidunt sunt autem excepturi, eum commodi, quia nemo nihil sed nostrum alias nobis quaerat exercitationem. Tempora alias minima quos dicta architecto, nesciunt necessitatibus unde error. Libero fugit deleniti laboriosam aliquid illo mollitia harum aspernatur necessitatibus accusamus dolorum, sapiente itaque! Saepe.</p>
+      <img src="images/follow.png" alt="follow">
     </div>
 
 
