--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="style/index.css">
   <link rel="stylesheet" href="style/header.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
 
@@ -22,51 +23,26 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
-    <div class="container">
-      <img src="images/bg-page.png" alt="chef" class="chef">
-      <img src="images/smartphone.png" alt="smartphone" class="smartphone">
-    </div>
 
-    <div class="container2">
-      <pre>
-        Lorem ipsum dolor sit amet, consectetur
-        adipisicing elit. Error, veritatis?
-        Incidunt sunt autem excepturi, eum commodi,
-        quia nemo nihil sed nostrum alias nobis 
-        quaerat exercitationem. Tempora alias minima
-        quos dicta architecto, nesciunt necessitatibus
-        unde error.Libero fugit deleniti laboriosam
-        aliquid illo mollitia harum aspernatur
-        necessitatibus accusamus dolorum, sapiente
-        itaque! Saepe. Lorem ipsum dolor sit amet.</pre>
-    </div>
-        <div class="container3">
-          <img src="images/follow.png" alt="follow" class="follow">
-          <p class="flowe">FOLLOW US</p>
-          <img src="images/twitter.png" alt="twitter" class="twitter">
-          <img src="images/facebook.png" alt="facebook" class="facebook">
-          <img src="images/google.png" alt="google" class="google">
-    </div>
+    <div class="container my-container">
+      <div class="wrapper my-wrapper">
+        <img src="images/bg-page.png" alt="chef" class="chef">
+        <img src="images/smartphone.png" alt="phone" class="phone">
+      </div>
 
-    <div>
-      <img src="images/viewmore.png" alt="viewmore">
-      <img src="images/clickhere.png" alt="clickhere">
-    </div>
-  
-    <div>
-      <img src="images/interface copy.png" alt="news">
-      <img src="images/news1.jpg" alt="news1">
-      <img src="images/news2.jpg" alt="news2">
-      <img src="images/news3.jpg" alt="news3">
-    </div>
+      <div class="container mid-container">
+        <div class="wrapper mid-wrapper">
+          <p>Lorem ipsum dolor sit amet consectetur, <br>adipisicing elit. Nihil nesciunt inventore <br>iure quis voluptatem modi explicabo in. <br> Deserunt, ab sapiente! Magnam totam <br>assumenda voluptatem eaque cumque <br> vero quae laborum consectetur! Quas <br> laborum, sunt maxime, dicta adipisci <br> doloribus mollitia fugiat porro aperiam <br>corporis incidunt similique! Eaque sapiente <br> inventore cumque ullam. Nam!</p>
+          
+        </div>
 
-    <div>
-      <img src="images/redcolumn.png" alt="gallery">
-      <img src="images/home-gallery1.jpg" alt="home-gallery1">
-      <img src="images/home-gallery2.jpg" alt="home-gallery2">
-      <img src="images/home-gallery3.jpg" alt="home-gallery3">
-      <img src="images/home-gallery4.jpg" alt="home-gallery4">
+      </div>
+
     </div>
+    
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 
 </html>
