--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="style/index.css">
-  <link rel="stylesheet" href="style/header.css">
+  <!-- <link rel="stylesheet" href="style/header.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 </head>
@@ -27,13 +27,22 @@
     <div class="container my-container">
       <div class="wrapper my-wrapper">
         <img src="images/bg-page.png" alt="chef" class="chef">
+        <div>
         <img src="images/smartphone.png" alt="phone" class="phone">
+        <img src="images/viewmore.png" alt="">
+        <img src="images/clickhere.png" alt="">
+        </div>
       </div>
 
       <div class="container mid-container">
         <div class="wrapper mid-wrapper">
-          <p>Lorem ipsum dolor sit amet consectetur, <br>adipisicing elit. Nihil nesciunt inventore <br>iure quis voluptatem modi explicabo in. <br> Deserunt, ab sapiente! Magnam totam <br>assumenda voluptatem eaque cumque <br> vero quae laborum consectetur! Quas <br> laborum, sunt maxime, dicta adipisci <br> doloribus mollitia fugiat porro aperiam <br>corporis incidunt similique! Eaque sapiente <br> inventore cumque ullam. Nam!</p>
-          
+          <div class="firstmid-wrapper">
+          <p class="txto">Lorem ipsum dolor sit amet consectetur, <br>adipisicing elit. Nihil nesciunt inventore <br>iure quis voluptatem modi explicabo in. <br> Deserunt, ab sapiente! Magnam totam <br>assumenda voluptatem eaque cumque <br> vero quae laborum consectetur! Quas <br> laborum, sunt maxime, dicta adipisci <br> doloribus mollitia fugiat porro aperiam <br>corporis incidunt similique! Eaque sapiente <br> inventore cumque ullam. Nam!</p>
+          <img src="images/follow.png" alt="">
+          </div>
+          <div class="secondmid-wrapper">
+            <img src="images/interface copy.png" alt="">
+          </div>
         </div>
 
       </div>
