--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="style/index.css" />
+    <!-- <link rel="stylesheet" href="style/header.css"> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="style/index.css">
-  <!-- <link rel="stylesheet" href="style/header.css"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
-</head>
-
-<body>
-
-  <!-- Header -->
+  <body>
+    <!-- Header -->
     <div id="header"></div>
-    
+
     <script>
       fetch("snippets/header.html")
-        .then(response => response.text())
-        .then(data => {
+        .then((response) => response.text())
+        .then((data) => {
           document.getElementById("header").innerHTML = data;
         });
     </script>
 
     <div class="container my-container">
       <div class="wrapper my-wrapper">
-        <img src="images/bg-page.png" alt="chef" class="chef">
+        <img src="images/bg-page.png" alt="chef" class="chef" />
         <div class="phone-wrapper">
-        <img src="images/smartphone.png" alt="phone" class="phone">
-        <div class="vc-wrapper">
-        <img src="images/viewmore.png" alt="" class="viewmore">
-        <img src="images/clickhere.png" alt="" class="clickhere">
-        </div>
+          <img src="images/smartphone.png" alt="phone" class="phone" />
+          <div class="vc-wrapper">
+            <img src="images/viewmore.png" alt="" class="viewmore" />
+            <img src="images/clickhere.png" alt="" class="clickhere" />
+          </div>
         </div>
       </div>
 
@@ -40,32 +42,71 @@
         <div class="wrapper mid-wrapper">
           <div class="firstmid-wrapper">
             <div class="firstmid1-wrapper">
-          <p class="txto">Lorem ipsum dolor sit amet consectetur, <br>adipisicing elit. Nihil nesciunt inventore <br>iure quis voluptatem modi explicabo in. <br> Deserunt, ab sapiente! Magnam totam <br>assumenda voluptatem eaque cumque <br> vero quae laborum consectetur! Quas <br> laborum, sunt maxime, dicta adipisci <br> doloribus mollitia fugiat porro aperiam <br>corporis incidunt similique! Eaque sapiente <br> inventore cumque ullam. Nam!</p>
-          </div>
-          <div class="firstmid2-wrapper">
-          <img src="images/follow.png" alt="" class="follow">
-          <p class="followtxt">FOLLOW US</p>
-          <div class="icons">
-            <div class="icons-wrapper">
-          <img src="images/twitter.png" alt="" class="twitter">
-          <img src="images/facebook.png" alt="" class="facebook">
-          <img src="images/google.png" alt="" class="google">
-          </div>
-          </div>
-          </div>
+              <p class="txto">
+                Lorem ipsum dolor sit amet consectetur, <br />adipisicing elit.
+                Nihil nesciunt inventore <br />iure quis voluptatem modi
+                explicabo in. <br />
+                Deserunt, ab sapiente! Magnam totam <br />assumenda voluptatem
+                eaque cumque <br />
+                vero quae laborum consectetur! Quas <br />
+                laborum, sunt maxime, dicta adipisci <br />
+                doloribus mollitia fugiat porro aperiam <br />corporis incidunt
+                similique! Eaque sapiente <br />
+                inventore cumque ullam. Nam!
+              </p>
+            </div>
+            <div class="firstmid2-wrapper">
+              <img src="images/follow.png" alt="" class="follow" />
+              <p class="followtxt">FOLLOW US</p>
+              <div class="icons">
+                <div class="icons-wrapper">
+                  <img src="images/twitter.png" alt="" class="twitter" />
+                  <img src="images/facebook.png" alt="" class="facebook" />
+                  <img src="images/google.png" alt="" class="google" />
+                </div>
+              </div>
+            </div>
           </div>
           <div class="secondmid-wrapper">
-            <img src="images/interface copy.png" alt="">
+            <img src="images/interface copy.png" alt="" class="newsimg" />
+            <div class="secondmid1-container container">
+              <div class="secondmid1-wrapper">
+                <!-- <img src="images/whitecolumn.png" alt="" class="contentimg"> -->
+                <img src="images/news1.jpg" alt="" class="news1" />
+                <p>News title one</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime optio non ipsam eaque fugit aut nisi nostrum minima
+                  reiciendis dolorum alias, voluptatem soluta, ratione illo?
+                </p>
+                <a href="#">Read more</a><br /><br>
+                <img src="images/news2.jpg" alt="" class="news2" />
+                <p>News title one</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime optio non ipsam eaque fugit aut nisi nostrum minima
+                  reiciendis dolorum alias, voluptatem soluta, ratione illo?
+                </p>
+                <a href="#">Read more</a><br /><br>
+                <img src="images/news3.jpg" alt="" class="news3" />
+                <p>News title one</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maxime optio non ipsam eaque fugit aut nisi nostrum minima
+                  reiciendis dolorum alias, voluptatem soluta, ratione illo?
+                </p>
+                <a href="#">Read more</a><br /><br>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
-
     </div>
-    
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
